udfps: Make pressed udfps view configurable
 * set a solid color by configuring config_udfpsColor
 * set a custom image by setting udfps_icon_pressed and making
   config_udfpsColor #00ffffff (transparent)

Change-Id: I028e0ba6ee012dc84cd365078ef4cbfbaad5cedc

--- a/packages/SystemUI/res/values/pixelage_dimens.xml
+++ b/packages/SystemUI/res/values/pixelage_dimens.xml
@@ -19,6 +19,12 @@
 <resources>
     <!-- Screen Record -->
     <dimen name="screenrecord_dot_size">48dp</dimen>
+    
+    <!-- Color of the UDFPS pressed view -->
+    <color name="config_udfpsColor">#ffffffff</color>
+
+    <!-- Doze: does the double tap sensor need a proximity check? -->
+    <bool name="doze_double_tap_proximity_check">false</bool>
 
     <!-- HD calling icon -->
     <dimen name="signal_icon_viewport_size">24dp</dimen>
